<resources>
    <string name="app_name">AdsManagment_lab3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Time Banking App</string>
    <string name="nav_header_subtitle">your.name@email.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Title">Title</string>
    <string name="DescriptionService">DescriptionService</string>
    <string name="DateTime">DateTime</string>
    <string name="DurationSlot">DurationSlot</string>
    <string name="Location">Location</string>
    <string name="edit">Edit</string>
    <string name="time_slots">Time Slots</string>
    <string name="menu_timeslot">TimeSlot</string>
</resources>